--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -1,14 +1,13 @@
-<div class="face-snap-card" [ngClass]="{snapped: buttonTextt === 'Oops, unSnap!'}">
+<div class="face-snap-card" *ngIf="faceSnap$ | async as faceSnap" [ngClass]="{snapped: buttonTextt === 'Oops, unSnap!'}">
   <h2>{{faceSnap.title | uppercase}}</h2>
   <a routerLink="/facesnaps" >Back</a>
-  <p>Mise en ligne le {{faceSnap.createDate | date : 'à HH:mm, le d MMMM yyyy' }}</p>
+  <p>Mise en ligne le {{ faceSnap.createDate | date : 'à HH:mm, le d MMMM yyyy' }}</p>
   <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
   <p>{{faceSnap.description}}</p>
   <p *ngIf="faceSnap.location">Photo prise à {{faceSnap.location}}</p>
   <p>
-    <button (click)="onSnap()">{{ buttonTextt }}</button>
+    <button (click)="onSnap(faceSnap.id)">{{ buttonTextt }}</button>
     <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps + ', 0)' }" >{{faceSnap.snaps}}</span>
   </p>
-  <p>{{ 4346234.36 | number: '1.0-1'}}</p>
 </div>
 
